kubernetes-manifests/sandbox/asciip/asciip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asciip
  labels:
    app: asciip
spec:
  selector:
    matchLabels:
      app: asciip
  template:
    metadata:
      labels:
        app: asciip
    spec:
      containers:
        - name: asciip
          image: node:26.7.0
          ports:
          - containerPort: 3000
          command: ["/bin/bash", "-c"]
          args:
          - |
            set -e
            git clone https://github.com/hhourani27/asciip &&
            cd asciip &&
            npm install &&
            npm start
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
