kubernetes-manifests/sandbox/asciip/asciip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asciip
spec:
  selector:
    app: asciip
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
