kubernetes-manifests/sandbox/asciip/asciip-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asciip
  annotations:
    external-dns.alpha.kubernetes.io/target: private-ingress.dtlp.cc
spec:
  rules:
    - host: asciip.dtlp.cc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: asciip
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`asciip.dtlp.cc`)
      services:
        - name: asciip
          kind: Service
          port: 80
  tls: {}
